--- a/index.html
+++ b/index.html
@@ -27,13 +27,21 @@
             align-items: center;
             justify-content: space-between;
         }
+        .nombre-nosotros {
+            color: #C22316
+        }
         header h1 {
             display: flex;
             align-items: center;
             margin: 0;
-            font-size: 36px;
+            font-size: 30px;
             flex: 1;
             text-align: center;
+        }
+        @media screen and (max-width: 600px) {
+        header h1 {
+            font-size: 24px; /* Reduce el tamaño de la fuente para pantallas pequeñas */
+        }
         }
         header img {
             max-width: 100px;
@@ -41,7 +49,7 @@
             margin-right: 20px;
         }
         .section {
-            padding: 30px;
+            padding: 20px;
             background: #ffffff;
             margin: 20px 0;
             border-radius: 15px;
@@ -53,28 +61,33 @@
             margin-bottom: 20px;
         }
         .products-grid {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        gap: 20px;
+        justify-content: space-between;
         }
         .product-item {
-            flex: 1 1 calc(33.333% - 20px);
-            background: #f9f9f9;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            transition: transform 0.2s ease-in-out;
-            text-decoration: none;
-            color: inherit;
+        background: #f9f9f9;
+        padding: 15px;
+        border-radius: 10px;
+        box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        text-align: center;
+        transition: transform 0.2s ease-in-out;
+        text-decoration: none;
+        color: inherit;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 90%;
         }
         .product-item img {
-            width: 100%;
-            max-width: 250px;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
+        width: 100%;
+        height: 250px;
+        object-fit: contain;
+        border-radius: 10px;
+        margin-bottom: 10px;
+        background-color: #f9f9f9;
+        }    
         .product-item:hover {
             transform: translateY(-5px);
         }
@@ -108,6 +121,11 @@
             margin: 0 15px;
             font-size: 18px;
         }
+        @media screen and (max-width: 600px) {
+        .products-grid {
+        grid-template-columns: 1fr;
+        }
+        }
     </style>
 </head>
 <body>
@@ -122,63 +140,69 @@
     <div class="container">
         <section class="section">
             <h2>Nosotros</h2>
-            <p>En <strong>Global Supplier Company, S.A. de C.V.</strong>, nos especializamos en la distribución de materiales eléctricos de alta calidad para proyectos residenciales, comerciales e industriales. Con años de experiencia en el mercado, nos comprometemos a ofrecer soluciones que aseguren la eficiencia y seguridad en cada instalación eléctrica.</p>
+            <p><strong class="nombre-nosotros">Global Supplier Company, S.A. de C.V.</strong> es una empresa regional con sede
+                en El Salvador. Nos especializamos en la distribución de materiales eléctricos de alta calidad para proyectos
+                residenciales, comerciales e industriales. Con más de 30 años de experiencia en el mercado, nos comprometemos
+                a ofrecer soluciones que garanticen la eficiencia y seguridad en cada instalación eléctrica.</p>
         </section>
 
         <section class="section">
             <h2>Líneas de Negocio</h2>
             <div class="products-grid">
-                <a href="https://www.ecuatran.com/es/" class="product-item">
-                    <img src="Ecuatran.png" alt="Cables y Conductores">
-                    <h3>Transformadores Ecuatran</h3>
-                    <p>Amplia gama de cables eléctricos para todo tipo de aplicaciones.</p>
+                <a href="https://www.ecuatran.com/es/" target = "_blank" class="product-item">
+                    <img src="ECUATRAN.jpg" alt="Imagen ECUATRAN">
+                    <h2>Transformadores ECUATRAN</h2>
                 </a>
-                <a href="https://www.ecuatran.com/es/" class="product-item">
-                    <img src="Ecuatran.png" alt="Cables y Conductores">
-                    <h3>Transformadores Ecuatran</h3>
-                    <p>Amplia gama de cables eléctricos para todo tipo de aplicaciones.</p>
+                <a href="https://www.intelli.com.br/" target = "_blank" class="product-item">
+                    <img src="Grupo Intelli.png" alt="Grupo Intelli">
+                    <h2>Grupo Intelli</h2>
                 </a>
-                <a href="https://www.ecuatran.com/es/" class="product-item">
-                    <img src="Ecuatran.png" alt="Cables y Conductores">
-                    <h3>Transformadores Ecuatran</h3>
-                    <p>Amplia gama de cables eléctricos para todo tipo de aplicaciones.</p>
+                <a href="https://ppcinsulators-santana.com/" target = "_blank" class="product-item">
+                    <img src="PPC Santana.png" alt="PPC Santana">
+                    <h2>PPC Santana</h2>
                 </a>
-                <a href="https://www.ecuatran.com/es/" class="product-item">
-                    <img src="Ecuatran.png" alt="Cables y Conductores">
-                    <h3>Transformadores Ecuatran</h3>
-                    <p>Amplia gama de cables eléctricos para todo tipo de aplicaciones.</p>
+                <a href="https://tuboscolmena.com/" target = "_blank" class="product-item">
+                    <img src="Colmena.png" alt="Colmena">
+                    <h2>Tubos Colmena</h2>
+                </a>
+                <a href="https://automation.honeywell.com/us/en/products/personal-protective-equipment/impact-by-honeywell/electrical-safety" target = "_blank" class="product-item">
+                    <img src="Salisbury.png" alt="Salisbury">
+                    <h2>Salisbury</h2>
+                </a>
+                <a href="https://www.glground.co/" target = "_blank" class="product-item">
+                    <img src="Ground Lightning.png" alt="Ground Lightning">
+                    <h2>Ground Lightning</h2>
+                </a>
+                <a href="https://www.band-it-idex.com/" target = "_blank" class="product-item">
+                    <img src="Band It.jpg" alt="BAND-IT">
+                    <h2>BAND-IT</h2>
+                </a>
+                <a href="https://conextube.com/" target = "_blank" class="product-item">
+                    <img src="Conextube.jpg" alt="Conextube">
+                    <h2>Conextube</h2>
                 </a>
             </div>
         </section>
 
         <section class="section">
-            <h2>Servicios</h2>
-            <ul>
-                <li><strong>Asesoría Técnica:</strong> Nuestro equipo de expertos está disponible para guiarte en la selección de los productos adecuados para tus proyectos.</li>
-                <li><strong>Entrega Rápida:</strong> Contamos con un eficiente sistema de distribución para asegurar que tus materiales lleguen a tiempo.</li>
-                <li><strong>Soporte Postventa:</strong> Nos mantenemos a tu disposición para resolver cualquier duda o problema que pueda surgir después de la compra.</li>
-            </ul>
-        </section>
-
-        <section class="section">
             <h2>Por qué Elegirnos</h2>
             <ul>
-                <li><strong>Calidad Garantizada:</strong> Trabajamos con las mejores marcas del mercado.</li>
-                <li><strong>Precios Competitivos:</strong> Ofrecemos productos de alta calidad a precios accesibles.</li>
-                <li><strong>Servicio al Cliente:</strong> Nuestro compromiso es con tu satisfacción total.</li>
+                <li><strong>Garantía</strong>
+                <li><strong>Calidad</strong>
+                <li><strong>Servicio</strong>
             </ul>
         </section>
 
         <section class="section contact-info">
             <h2>Contáctanos</h2>
             <p><strong>Teléfono:</strong> +503 7874-8056</p>
-            <p><strong>Correo Electrónico:</strong> santosgomez@gsc.com</p>
+            <p><strong>Correo Electrónico:</strong> santosgomez@gsc.com.sv</p>
             <p><strong>Dirección:</strong> El Salvador</p>
         </section>
 
         <section class="section">
             <h2>¡Solicita tu Cotización Hoy Mismo!</h2>
-            <p>Llama al +503 7874-8056 o envíanos un correo a <strong>santosgomez@gsc.com</strong> para recibir una cotización personalizada.</p>
+            <p>Llama al +503 7874-8056 o envíanos un correo a <strong>santosgomez@gsc.com.sv</strong> para recibir una cotización personalizada.</p>
         </section>
 
     </div>
@@ -186,7 +210,7 @@
     <footer>
         <p>&copy; 2024 Global Supplier Company, S.A. de C.V.</p>
         <div class="social-media">
-            <a href="#">LinkedIn</a>
+            <a href="https://www.linkedin.com/in/santos-antonio-gomez-lopez-06250163/" target = "_blank">LinkedIn</a>
         </div>
     </footer>
 
